// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-groups-field Renders \`pattern-groups-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <div
    class="flex xs12"
  >
    <!---->
  </div>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <pattern-group-field-stub
        attributes="[object Object]"
        disabled="true"
        group="[object Object]"
      />
    </div>
    <div
      class="layout justify-center"
    >
      <c-pattern-operator-chip-stub>
        Or
      </c-pattern-operator-chip-stub>
    </div>
  </div>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <pattern-group-field-stub
        attributes="[object Object]"
        disabled="true"
        group="[object Object]"
      />
    </div>
    <div
      class="layout justify-center"
    >
      <c-pattern-operator-chip-stub>
        Or
      </c-pattern-operator-chip-stub>
    </div>
  </div>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <pattern-group-field-stub
        attributes="[object Object]"
        disabled="true"
        group="[object Object]"
      />
    </div>
    <div
      class="layout justify-center"
      style="display: none;"
    >
      <c-pattern-operator-chip-stub>
        Or
      </c-pattern-operator-chip-stub>
    </div>
  </div>
  <div
    class="layout mt-2 align-center"
  >
    <button
      class="mr-2 v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"
      disabled="disabled"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add group
      </span>
    </button>
    <span
      class="error--text"
      style="display: none;"
    >
      Please add at least one group
    </span>
  </div>
</div>
`;

exports[`pattern-groups-field Renders \`pattern-groups-field\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="flex xs12"
  >
    <div
      class="v-alert v-sheet theme--dark info"
      role="alert"
    >
      <div
        class="v-alert__wrapper"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-alert__icon material-icons theme--dark"
        >
          info
        </i>
        <div
          class="v-alert__content"
        >
      No pattern set. Click 'Add group' button to start adding fields to the pattern
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout mt-2 align-center"
  >
    <button
      class="mr-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add group
      </span>
    </button>
    <span
      class="error--text"
      style="display: none;"
    >
      Please add at least one group
    </span>
  </div>
</div>
`;

exports[`pattern-groups-field Renders \`pattern-groups-field\` with errors 1`] = `
<div
  class="layout column"
>
  <div
    class="flex xs12"
  >
    <div
      class="v-alert v-sheet theme--dark info"
      role="alert"
    >
      <div
        class="v-alert__wrapper"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-alert__icon material-icons theme--dark"
        >
          info
        </i>
        <div
          class="v-alert__content"
        >
      No pattern set. Click 'Add group' button to start adding fields to the pattern
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout mt-2 align-center"
  >
    <button
      class="mr-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default error"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add group
      </span>
    </button>
    <span
      class="error--text"
      style=""
    >
      Please add at least one group
    </span>
  </div>
</div>
`;
